--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
         </div>
         <div>
             <nav>
-                <p>About me</p>
-                <p>Hobbies</p>
-                <p>Contact us</p>
+                <ul>
+                <li>About me</li>
+                <li>Hobbies</li>
+                <li>Contact us</li>
+                </ul>
+                
             </nav>
         </div>
     </header>
     <section>
         <h2>Biography</h2>
         <p>My name is John Doe. I am a software developer with a passion for coding and technology.</p>
-        <img src="profile.png" alt="Profile Picture" width="200" height="200">
+        <img src="profile.png" alt="John Doe's Profile Picture" width="200" height="200">
     </section>
     <section>
         <h2>Hobbies</h2>
